unpackaged/main/default/objects/fferpcore__VirtualDataObjectTargetMapping__mdt/fferpcore__VirtualDataObjectTargetMapping__mdt.object-meta.xml
<CustomObject>
    <label>Virtual Data Object Target Mapping</label>
    <pluralLabel>Virtual Data Object Target Mappings</pluralLabel>
</CustomObject>