unpackaged/main/default/objects/fferpcore__VirtualDataObjectTargetMapping__mdt/fields/fferpcore__Consumer__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Consumer__c</fullName>
    <description>The name of the Consumer invoked whenever a VirtualDataObject is received.</description>
    <inlineHelpText>The name of the Consumer invoked whenever a VirtualDataObject is received.</inlineHelpText>
    <label>Consumer</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>