unpackaged/main/default/objects/fferpcore__VirtualDataObjectTargetMapping__mdt/fields/fferpcore__CorrelationStrategy__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__CorrelationStrategy__c</fullName>
    <description>The strategy used to determine how existing child targets should be dealt with.</description>
    <inlineHelpText>The strategy used to determine how existing child targets should be dealt with.</inlineHelpText>
    <label>Correlation Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Append</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>UpdateTotal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>