unpackaged/main/default/objects/fferpcore__VirtualDataObjectTargetMapping__mdt/fields/fferpcore__CorrelationTargetKey__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__CorrelationTargetKey__c</fullName>
    <description>The SObjectField on the target object used for correlation.</description>
    <inlineHelpText>The SObjectField on the target object used for correlation.</inlineHelpText>
    <label>Correlation Target Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>