unpackaged/main/default/objects/fferpcore__VirtualDataObjectTargetMapping__mdt/fields/fferpcore__CorrelationVirtualObjectKey__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__CorrelationVirtualObjectKey__c</fullName>
    <description>The field on the VirtualDataObject used for correlation.</description>
    <inlineHelpText>The field on the VirtualDataObject used for correlation.</inlineHelpText>
    <label>Correlation Virtual Object Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>