unpackaged/main/default/objects/fferpcore__VirtualDataObjectTargetMapping__mdt/fields/fferpcore__TargetPath__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__TargetPath__c</fullName>
    <description>The path to the target object as comma-seperated SObject types.</description>
    <inlineHelpText>The path to the target object as comma-seperated SObject types.</inlineHelpText>
    <label>Target Path</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>