unpackaged/main/default/objects/fferpcore__VirtualDataObjectTargetMapping__mdt/fields/fferpcore__Type__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Type__c</fullName>
    <description>The type of this mapping.</description>
    <inlineHelpText>The type of this mapping.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Writeback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>